<resources>
    <string name="app_name">E Danfo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="get_started">Get Started</string>
    <string name="splash_screen_logo">Splash Sceen Logo</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="or_create_my_account">Or Create My account</string>
    <string name="your_phone_number">Your Phone number</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="phone_verification">Phone Verification</string>
    <string name="agree_terms_of_service">By creating an account, you agree to our \nTerms of Service and Privacy Policy</string>
    <string name="welcome_to_edanfo">Welcome to Edanfo</string>
    <string name="phone_activation">Phone Activation</string>
    <string name="enter_otp_str">Enter the 4-digit code sent to you at +994 10 999 00 00. did you enter the correct number?</string>
    <string name="resend_code_str">Resend Code in 10 seconds</string>
    <string name="enter_your_otp_code">Enter your OTP code</string>
    <string name="create_profile">Create Profile</string>
    <string name="first_name">First name</string>
    <string name="home_address">Home Address</string>
    <string name="last_name">Last Name</string>
    <string name="plate_number">Vehicle Plate Number</string>
    <string name="email_address">Email Address</string>
    <string name="create_driver_account">Create Driver Account</string>
    <string name="enter_password_again">Enter Password Again</string>
    <string name="swipe_register_as_driver_str">Not a Driver? Swipe right and register as a Passenger</string>
    <string name="register_driver_account_str">Swipe left to register as a DRIVER</string>
    <string name="create_passenger_account">Create Passenger\'s Account</string>
    <string name="login">Login</string>
    <string name="rider">Rider</string>
    <string name="driver">Driver</string>
    <string name="transportation_in_a_breeze">Transportation in a Breeze</string>
    <string name="complete">Complete</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="new_password">New Password</string>
    <string name="enter_your_details">Enter your details</string>


    <!-- For  Stats Spinner-->
    <string-array name="stat_spinner_array">
        <item>Today</item>
        <item>This Week</item>
        <item>This Month</item>
        <item>This Year</item>
        <item>Total</item>
    </string-array>


</resources>