<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fragment_driver_root_cl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        tools:context=".ui.auth.createprofile.DriverProfile">

        <!--          FirstName Edit Text-->

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="Create Driver's Account"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fragment_driver_first_name_til"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:hint="@string/first_name"
            android:outlineAmbientShadowColor="@color/colorPrimary"
            android:outlineSpotShadowColor="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_not_a_driver_tv">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fragment_driver_first_name_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:inputType="textPassword"
                android:paddingLeft="10dp" />

        </com.google.android.material.textfield.TextInputLayout>


        <!--          LastName Edit Text-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fragment_driver_last_name_til"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/last_name"
            android:outlineAmbientShadowColor="@color/colorPrimary"
            android:outlineSpotShadowColor="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="@+id/fragment_driver_first_name_til"
            app:layout_constraintStart_toStartOf="@+id/fragment_driver_first_name_til"
            app:layout_constraintTop_toBottomOf="@+id/fragment_driver_first_name_til">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fragment_driver_last_name_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>


        <!--          Email Address-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fragment_driver_email_til"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/email_address"
            android:outlineAmbientShadowColor="@color/colorPrimary"
            android:outlineSpotShadowColor="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="@+id/fragment_driver_last_name_til"
            app:layout_constraintStart_toStartOf="@+id/fragment_driver_last_name_til"
            app:layout_constraintTop_toBottomOf="@+id/fragment_driver_last_name_til">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fragment_driver_email_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>


        <!--          Plate Number-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fragment_driver_plate_number_til"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/plate_number"
            android:outlineAmbientShadowColor="@color/colorPrimary"
            android:outlineSpotShadowColor="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="@+id/fragment_driver_email_til"
            app:layout_constraintStart_toStartOf="@+id/fragment_driver_email_til"
            app:layout_constraintTop_toBottomOf="@+id/fragment_driver_email_til">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fragment_driver_plate_number_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>


        <!--          Password-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fragment_driver_password_til"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/password"
            android:outlineAmbientShadowColor="@color/colorPrimary"
            android:outlineSpotShadowColor="@color/colorPrimary"
            app:endIconMode="password_toggle"
            app:layout_constraintEnd_toEndOf="@+id/fragment_driver_plate_number_til"
            app:layout_constraintStart_toStartOf="@+id/fragment_driver_plate_number_til"
            app:layout_constraintTop_toBottomOf="@+id/fragment_driver_plate_number_til">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fragment_driver_password_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>


        <!--         Enter Password Again-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fragment_driver_repeat_password_til"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/enter_password_again"
            android:outlineAmbientShadowColor="@color/colorPrimary"
            android:outlineSpotShadowColor="@color/colorPrimary"
            app:endIconMode="password_toggle"
            app:layout_constraintEnd_toEndOf="@+id/fragment_driver_password_til"
            app:layout_constraintStart_toStartOf="@+id/fragment_driver_password_til"
            app:layout_constraintTop_toBottomOf="@+id/fragment_driver_password_til">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fragment_driver_repeat_password_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>


        <!--           Create Driver Button-->

        <Button
            android:id="@+id/fragment_driver_profile_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:enabled="false"
            android:paddingLeft="30dp"
            android:paddingTop="16dp"
            android:paddingRight="30dp"
            android:paddingBottom="16dp"
            android:text="@string/create_driver_account"
            android:textAlignment="viewStart"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:textStyle="bold"
            app:cornerRadius="7dp"
            app:icon="@drawable/ic_baseline_arrow_forward"
            app:iconGravity="end"
            app:layout_constraintEnd_toEndOf="@+id/fragment_driver_repeat_password_til"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/fragment_driver_repeat_password_til"
            app:layout_constraintTop_toBottomOf="@+id/fragment_driver_repeat_password_til" />

        <TextView
            android:id="@+id/fragment_not_a_driver_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/swipe_register_as_driver_str"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/fragment_driver_first_name_til"
            app:layout_constraintStart_toStartOf="@+id/fragment_driver_first_name_til"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>