<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.main.driver.account.DriverAccountProfile">

    <LinearLayout
        android:id="@+id/fragment_driver_account_profile_app_bar_ll"
        style="@style/CustomAppBar">

        <ImageView
            android:id="@+id/fragment_driver_account_profile_back_arrow_iv"
            style="@style/GreenBackArrow" />

        <TextView
            android:id="@+id/fragment_driver_account_profile_profile_settings_tv"
            style="@style/CustomAppBarText"
            android:text="Profile Settings" />
    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:orientation="horizontal">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/driver_account_profile_imag"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:src="@drawable/logo_filled_green_background"
                    app:civ_border_color="@color/colorAccent"
                    app:civ_border_width="4dp" />

                <TextView
                    android:id="@+id/fragment_driver_account_profile_change_image_tv"
                    style="@style/NormalSubText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="Tap to Change Profile Picture" />

            </LinearLayout>

            <!--            First Name-->
            <TextView
                android:id="@+id/fragment_driver_account_profile_first_name_tv"
                style="@style/NormalSubText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/first_name" />

            <EditText
                android:id="@+id/fragment_driver_account_profile_first_name_et"
                style="@style/GreenEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="Kufre"
                android:inputType="textPersonName" />


            <!--            Last Name-->
            <TextView
                android:id="@+id/fragment_driver_account_profile_last_name_tv"
                style="@style/NormalSubText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/last_name" />

            <EditText
                android:id="@+id/fragment_driver_account_profile_last_name_et"
                style="@style/GreenEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="Ndifreke"
                android:inputType="textPersonName" />


            <!--            Email Address-->
            <TextView
                android:id="@+id/fragment_driver_account_profile_email_tv"
                style="@style/NormalSubText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/email_address" />

            <EditText
                android:id="@+id/fragment_driver_account_profile_email_et"
                style="@style/GreenEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="ndifreke@gmail.com"
                android:inputType="textEmailAddress" />

            <!--            Phone Number-->
            <TextView
                android:id="@+id/fragment_driver_account_profile_phone_number_tv"
                style="@style/NormalSubText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/phone_number" />

            <EditText
                android:id="@+id/fragment_driver_account_profile_phone_number_et"
                style="@style/GreenEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="07012345678"
                android:inputType="phone" />

            <Button
                android:id="@+id/fragment_driver_account_profile_update_button"
                style="@style/PrimaryButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:enabled="false"
                android:text="Update Profile" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</LinearLayout>