<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_login_root_nsv"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <!--    Sub container-->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fragment_login_sub_root_cl"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.auth.LoginFragment">

        <!--        Header Background image-->
        <ImageView
            android:id="@+id/fragment_sign_up_header_img"
            android:layout_width="0dp"
            android:layout_height="170dp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/colorPrimary" />

        <!--        Body-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/fragment_login_body_cl"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragment_sign_up_header_img"
            app:layout_constraintVertical_bias="1.0">

            <!--            Welcome back text-->


            <!--The Country list-->

            <TextView
                android:id="@+id/fragment_login_welcome_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/poppins_bold"
                android:text="Welcome Back!"
                android:textColor="#232323"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.hbb20.CountryCodePicker
                android:id="@+id/fragment_login_country_picker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                app:ccpDialog_fastScroller_bubbleColor="@color/colorAccent"
                app:ccp_defaultNameCode="NG"
                app:ccp_showNameCode="false"
                app:ccp_textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/fragment_login_phone_number_text_layout_tl" />


            <!--            PhoneNumber Edit Text-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fragment_login_phone_number_text_layout_tl"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/phone_number"
                android:outlineAmbientShadowColor="@color/colorPrimary"
                android:outlineSpotShadowColor="@color/colorPrimary"
                app:boxStrokeColor="@color/colorPrimary"
                app:endIconDrawable="@drawable/ic_baseline_check_circle"
                app:endIconMode="custom"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/fragment_login_country_picker"
                app:layout_constraintTop_toBottomOf="@+id/fragment_login_welcome_tv">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fragment_login_phone_number_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#FFFFFF" />

            </com.google.android.material.textfield.TextInputLayout>

            <!--           Password Edit Text-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fragment_driver_first_name_til"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:hint="@string/password"
                android:outlineAmbientShadowColor="@color/colorPrimary"
                android:outlineSpotShadowColor="@color/colorPrimary"
                app:endIconMode="password_toggle"
                app:layout_constraintEnd_toEndOf="@+id/fragment_login_phone_number_text_layout_tl"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fragment_login_phone_number_text_layout_tl">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fragment_login_password_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#FFFFFF"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <!--            Forgot password-->
            <TextView
                android:id="@+id/fragment_login_forgot_password_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/poppins"
                android:clickable="true"
                android:textColor="@color/colorPrimary"
                android:focusable="true"
                android:text="@string/forgot_password"
                app:layout_constraintStart_toStartOf="@+id/fragment_driver_first_name_til"
                app:layout_constraintTop_toBottomOf="@+id/fragment_driver_first_name_til" />


            <!--            Login Button-->

            <!--            Create my account text view-->
            <Button
                android:id="@+id/fragment_login_login_btn"
                android:layout_width="0dp"
                style="@style/PrimaryButton"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/login"
                android:textAlignment="viewStart"
                app:icon="@drawable/ic_baseline_arrow_forward"
                app:iconGravity="end"
                app:layout_constraintBottom_toTopOf="@+id/fragment_login_create_my_account_tv"
                app:layout_constraintEnd_toEndOf="@+id/fragment_driver_first_name_til"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/fragment_login_forgot_password_tv" />

            <TextView
                android:id="@+id/fragment_login_create_my_account_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="24dp"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/or_create_my_account"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/fragment_login_login_btn" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>